Added css styles to hw_23.01_variant2

--- a/23.01.19/hw_23.01_variant2.html
+++ b/23.01.19/hw_23.01_variant2.html
@@ -14,12 +14,12 @@
             <img src="photo.jpg" alt="This is a business card photo" title="This is a business card photo">
         </div>
         <div class="phone">
-            <span class="phoneTitle">Телефон: </span>
-            <span class="phoneNumber">+380971722125</span>
+            <span class="title">Телефон: </span>
+            <span class="number">+380971722125</span>
         </div>
         <div class="email">
-            <span class="emailTitle">Email: </span>
-            <span class="emailNumber">gorykyulia@gmail.com</span>
+            <span class="title">Email: </span>
+            <span class="number">gorykyulia@gmail.com</span>
         </div>
     </div>
 </body>
