--- a/4.02.19/index.html
+++ b/4.02.19/index.html
@@ -1,12 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>
-           Resume
-        </title>
+        <title>Resume</title>
         <meta charset="UTF-8">
-        <meta name="keywords" content="">
-        <meta name="description" content="">
 		<link rel="stylesheet" href="css/style_cv.css">
     </head>
 	<body>
