Edited html and css files

--- a/6.02/index.html
+++ b/6.02/index.html
@@ -9,17 +9,15 @@
 <!--   HEADER SECTION   -->
     <header class="header">
       <div class="logo">MIMIN&#216;</div>
-      <nav class="menu">
-        <ul class="menu__list">
-          <li class="menu__item"><a href="#" class="menu__link"></a>lifestyle</li>
-          <li class="menu__item"><a href="#" class="menu__link"></a>photodiary</li>
-          <li class="menu__item"><a href="#" class="menu__link"></a>music</li>
-          <li class="menu__item"><a href="#" class="menu__link"></a>travel</li>
+        <ul class="menu">
+          <li class="menu__item"><a href="#" class="menu__link">lifestyle</a></li>
+          <li class="menu__item"><a href="#" class="menu__link">photodiary</a></li>
+          <li class="menu__item"><a href="#" class="menu__link">music</a></li>
+          <li class="menu__item"><a href="#" class="menu__link">travel</a></li>
         </ul>
-      </nav>
     </header>
 <!--  MAIN SECTION   -->
-    <section class="main-section">
+    <section class="main-section section">
       <div class="main-photo">
         <img src="image/main.jpg" alt="Main photo" title="Main photo">
       </div>
