Fixed the markup,css and added media quaries

--- a/6.02/index.html
+++ b/6.02/index.html
@@ -3,18 +3,19 @@
   <head>
     <meta charset="UTF-8">
     <title>Mimino</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
 <!--   HEADER SECTION   -->
     <header class="header">
       <div class="logo">MIMIN&#216;</div>
-        <ul class="menu">
-          <li class="menu__item"><a href="#" class="menu__link">lifestyle</a></li>
-          <li class="menu__item"><a href="#" class="menu__link">photodiary</a></li>
-          <li class="menu__item"><a href="#" class="menu__link">music</a></li>
-          <li class="menu__item"><a href="#" class="menu__link">travel</a></li>
-        </ul>
+      <ul class="menu">
+        <li class="menu__item"><a href="#" class="menu__link">lifestyle</a></li>
+        <li class="menu__item"><a href="#" class="menu__link">photodiary</a></li>
+        <li class="menu__item"><a href="#" class="menu__link">music</a></li>
+        <li class="menu__item"><a href="#" class="menu__link">travel</a></li>
+      </ul>
     </header>
 <!--  MAIN SECTION   -->
     <section class="main-section section">
@@ -31,7 +32,7 @@
       </div>
 <!--  ARTICLES 4   -->
       <div class="block-articles">
-        <article class="article article-marg">
+        <article class="article block-articles__article">
           <div class="article__image">
             <img src="image/photo1.jpg" class="article__img" alt="This is a photo1" title="This is a photo1">
           </div>
@@ -39,7 +40,7 @@
           <h3 class="article__title title">More than just a music festival</h3>
           <p class="article__text text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid animi consequatur eum fuga fugiat harum itaque iusto molestiae natus, nemo neque nisi pariatur quae recusandae sapiente sit, tempora temporibus vero.</p>
         </article>
-        <article class="article article-marg">
+        <article class="article block-articles__article">
           <div class="article__image">
             <img src="image/photo2.jpg" class="article__img" alt="This is a photo12" title="This is a photo2">
           </div>
@@ -47,7 +48,7 @@
           <h3 class="article__title title">Life tastes better with coffee</h3>
           <p class="article__text text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid animi consequatur eum fuga fugiat harum itaque iusto molestiae natus, nemo neque nisi pariatur quae recusandae sapiente sit, tempora temporibus vero.</p>
         </article>
-        <article class="article article-marg">
+        <article class="article block-articles__article">
           <div class="article__image">
             <img src="image/photo3.jpg" class="article__img" alt="This is a photo3" title="This is a photo">
           </div>
@@ -55,7 +56,7 @@
           <h3 class="article__title title">American dream</h3>
           <p class="article__text text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid animi consequatur eum fuga fugiat harum itaque iusto molestiae natus, nemo neque nisi pariatur quae recusandae sapiente sit, tempora temporibus vero.</p>
         </article>
-        <article class="article article-marg">
+        <article class="article block-articles__article">
           <div class="article__image">
             <img src="image/photo4.jpg" class="article__img" alt="This is a photo4" title="This is a photo4">
           </div>
@@ -78,7 +79,7 @@
 <!--    ARTICLES 2-->
     <section class="flex-box section">
       <div class="block-articles">
-        <article class="article article-marg">
+        <article class="article block-articles__article">
           <div class="article__image">
             <img src="image/photo5.jpg" class="article__img" alt="This is a photo1" title="This is a photo6">
           </div>
@@ -86,7 +87,7 @@
           <h3 class="article__title title">Top 10 song for running</h3>
           <p class="article__text text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid animi consequatur eum fuga fugiat harum itaque iusto molestiae natus, nemo neque nisi pariatur quae recusandae sapiente sit, tempora temporibus vero.</p>
         </article>
-        <article class="article article-marg">
+        <article class="article block-articles__article">
           <div class="article__image">
             <img src="image/photo6.jpg" class="article__img" alt="This is a photo6" title="This is a photo6">
           </div>
