--- a/4.02/index.html
+++ b/4.02/index.html
@@ -1,88 +1,91 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Resume</title>
-        <meta charset="UTF-8">
-		<link rel="stylesheet" href="css/style_cv.css">
-    </head>
-	<body>
-		<div class="resume ">
-			<h2 class="resume__fullname">Yulia Goryk</h2>
+  <head>
+    <title>Resume</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/style_cv.css">
+  </head>
+  <body>
+    <div class="resume ">
+      <h2 class="resume__fullname">Yulia Goryk</h2>
 
-								<!--      Personal information section    -->
+  <!--      Personal information section    -->
 
-			<div class="block block-personal">
-			<h3 class="block-personal__header header">Personal information</h3>
-			<div class="block-personal__text text">
-				<div class="block-personal__field">
-					<div class="block-personal__title">Address: </div>
-					<div class="block-personal__info">14, Vyshneva street, Tarasivka, Kyiv region, 08161, Ukraine</div>
-				</div>
-				<div class="block-personal__field">
-					<div class="block-personal__title">Telephone: </div>
-					<div class="block-personal__info">+380971722125</div>
-				</div>
-				<div class="block-personal__field">
-					<div class="block-personal__title">Email: </div>
-					<div class="block-personal__info">gorykyulia@gmail.com</div>
-				</div>
-				<div class="block-personal__field">
-					<div class="block-personal__title">Date of birth: </div>
-					<div class="block-personal__info">30th August 1986</div>
-				</div>
-				<div class="block-personal__field">
-					<div class="block-personal__title">Nationality: </div>
-					<div class="block-personal__info">Ukrainian</div>
-				</div>
-			</div>
-		</div>
+      <div class="block block-personal">
+        <h3 class="block-personal__header header">Personal information</h3>
+        <div class="block-personal__text text">
+          <div class="block-personal__field">
+            <div class="block-personal__title">Address:</div>
+            <div class="block-personal__info">14, Vyshneva street, Tarasivka, Kyiv region, 08161, Ukraine</div>
+          </div>
+          <div class="block-personal__field">
+            <div class="block-personal__title">Telephone:</div>
+            <div class="block-personal__info">+380971722125</div>
+          </div>
+          <div class="block-personal__field">
+            <div class="block-personal__title">Email:</div>
+            <div class="block-personal__info">gorykyulia@gmail.com</div>
+          </div>
+          <div class="block-personal__field">
+            <div class="block-personal__title">Date of birth:</div>
+            <div class="block-personal__info">30th August 1986</div>
+          </div>
+          <div class="block-personal__field">
+            <div class="block-personal__title">Nationality:</div>
+            <div class="block-personal__info">Ukrainian</div>
+          </div>
+        </div>
+      </div>
 
-							<!--      Objective section		-->
+      <!--      Objective section		-->
 
-			<div class="block block-objective">
-				<h3 class="block-objective__header header">Objective</h3>
-				<p class="block-objective__text text">Start a career as a Junior frontend developer and improve own knowledge and skills in web developing
-				</p>
-			</div>
-							<!--      Education section		-->
+      <div class="block block-objective">
+        <h3 class="block-objective__header header">Objective</h3>
+        <p class="block-objective__text text">Start a career as a Junior frontend developer and improve own knowledge and
+          skills in web developing
+        </p>
+      </div>
+      <!--      Education section		-->
 
-			<div class="block block-education">
-				<h3 class="block-education__header header">Education</h3>
-				<p class="block-education__text text">Vinnitsa National Technical University, department of software of automatic systems, Bachelor’s degree in Computer Sciences (2003 - 2008)</p>
-			</div>
+      <div class="block block-education">
+        <h3 class="block-education__header header">Education</h3>
+        <p class="block-education__text text">Vinnitsa National Technical University, department of software of automatic
+          systems, Bachelor’s degree in Computer Sciences (2003 - 2008)</p>
+      </div>
 
-							<!--      Qualifications section 		-->
+      <!--      Qualifications section 		-->
 
-			<div class="block block-qualif">
-				<h3 class="block-qualif__header header">Qualifications</h3>
-				<p class="block-qualif__text text">Course of study in “Computer Science” with advanced study of the English language (2003 – 2007)</p>
-			</div>
-							<!--      Skills section		-->
+      <div class="block block-qualif">
+        <h3 class="block-qualif__header header">Qualifications</h3>
+        <p class="block-qualif__text text">Course of study in “Computer Science” with advanced study of the English language
+          (2003 – 2007)</p>
+      </div>
+      <!--      Skills section		-->
 
-			<div class="block block-skills">
-				<h3 class="block-skills__header header">Personal information</h3>
-				<ul class="block-skills__list list">
-					<li>HTML5</li>
-					<li>CSS3</li>
-					<li>JavaScript ES6</li>
-					<li>Git</li>
-					<li>Gulp</li>
-					<li>Less</li>
-					<li>Adobe Photoshop</li>
-				</ul>
-			</div>
-							<!--      Personal qualities section		-->
+      <div class="block block-skills">
+        <h3 class="block-skills__header header">Personal information</h3>
+        <ul class="block-skills__list list">
+          <li>HTML5</li>
+          <li>CSS3</li>
+          <li>JavaScript ES6</li>
+          <li>Git</li>
+          <li>Gulp</li>
+          <li>Less</li>
+          <li>Adobe Photoshop</li>
+        </ul>
+      </div>
+      <!--      Personal qualities section		-->
 
-			<div class="block block-qualities">
-				<h3 class="block-qualities__header header">Personal information</h3>
-				<ul class="block-qualities__list list">
-					<li>Accurate</li>
-					<li>Hardworking</li>
-					<li>Honest</li>
-					<li>Organized</li>
-					<li>Self-motivated</li>
-				</ul>
-			</div>
-		</div>
-	</body>
+      <div class="block block-qualities">
+        <h3 class="block-qualities__header header">Personal information</h3>
+        <ul class="block-qualities__list list">
+          <li>Accurate</li>
+          <li>Hardworking</li>
+          <li>Honest</li>
+          <li>Organized</li>
+          <li>Self-motivated</li>
+        </ul>
+      </div>
+    </div>
+  </body>
 </html>
