Finished the second block

--- a/11.02/index.html
+++ b/11.02/index.html
@@ -77,6 +77,55 @@
     </div>
   </section>
 
+      <!--  What we do section  -->
+
+  <section class="section">
+    <div class="container">
+
+      <div class="aim pb-3 text-center">What we do</div>
+      <div class="title font-weight-bold text-uppercase pb-5 text-center">Story about us</div>
+
+      <div class="row justify-content-center">
+        <div class="col-10">
+          <p class="text py-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+        </div>
+      </div>
+
+      <div class="row justify-content-center">
+        <div class="col-4">
+          <div class="image">
+            <img src="image/keyboard.jpg" alt="This is an image">
+          </div>
+          <div class="block-info">
+            <img src="image/users_icon.svg" alt="This is a user icon">
+            <p>super team</p>
+          </div>
+        </div>
+
+        <div class="col-4">
+          <div class="image">
+            <img src="image/photo1.jpg" alt="This is an image">
+          </div>
+          <div class="block-info">
+            <img src="image/users_icon.svg" alt="This is a user icon">
+            <p>super team</p>
+          </div>
+        </div>
+
+        <div class="col-4">
+          <div class="image">
+            <img src="image/photo2.jpg" alt="This is an image">
+          </div>
+          <div class="block-info">
+            <img src="image/users_icon.svg" alt="This is a user icon">
+            <p>super team</p>
+          </div>
+        </div>
+
+    </div>
+
+  </section>
+
 
 
 </body>
