Finished th line block

--- a/11.02/index.html
+++ b/11.02/index.html
@@ -126,6 +126,32 @@
 
   </section>
 
+  <div class="lines">
+    <div class="container">
+      <div class="row justify-content-between align-items-center">
+        <div class="lines-item flex-grow-1">
+          <span class="number">42</span>
+          <p class="line-text">Web Design Projects</p>
+        </div>
+        <div class="lines-item flex-grow-1">
+          <span class="number">123</span>
+          <p class="line-text">happy client</p>
+        </div>
+        <div class="lines-item flex-grow-1">
+          <span class="number">15</span>
+          <p class="line-text">award winner</p>
+        </div>
+        <div class="lines-item flex-grow-1">
+          <span class="number">99</span>
+          <p class="line-text">cup of coffee</p>
+        </div>
+        <div class="lines-item flex-grow-1">
+          <span class="number">24</span>
+          <p class="line-text">members</p>
+        </div>
+      </div>
+    </div>
+  </div>
 
 
 </body>
