Finished a service section

--- a/11.02/index.html
+++ b/11.02/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://i.icomoon.io/public/temp/e44bb8910a/UntitledProject/style.css">
 
   <link rel="stylesheet" href="css/main.css">
 </head>
@@ -97,7 +98,7 @@
             <img src="image/keyboard.jpg" alt="This is an image">
           </div>
           <div class="block-info">
-            <img src="image/users_icon.svg" alt="This is a user icon">
+            <span class="icon-users_icon"></span>
             <p>super team</p>
           </div>
         </div>
@@ -107,7 +108,7 @@
             <img src="image/photo1.jpg" alt="This is an image">
           </div>
           <div class="block-info">
-            <img src="image/users_icon.svg" alt="This is a user icon">
+            <span class="icon-users_icon"></span>
             <p>super team</p>
           </div>
         </div>
@@ -117,7 +118,7 @@
             <img src="image/photo2.jpg" alt="This is an image">
           </div>
           <div class="block-info">
-            <img src="image/users_icon.svg" alt="This is a user icon">
+            <span class="icon-users_icon"></span>
             <p>super team</p>
           </div>
         </div>
@@ -153,6 +154,160 @@
     </div>
   </div>
 
+<section class="section">
+  <div class="container">
 
+    <div class="aim pb-3 text-center">What work with</div>
+    <div class="title font-weight-bold text-uppercase pb-5 text-center">Amazing Services</div>
+
+    <div class="row">
+      <div class="col-4 col-item">
+        <span class="icon-alarm"></span>
+        <div class="info">
+          <h4>Photography</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do</p>
+        </div>
+      </div>
+      <div class="col-4 col-item">
+        <span class="icon-line_graph"></span>
+        <div class="info">
+          <h4>Web design</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do</p>
+        </div>
+      </div>
+      <div class="col-4 col-item">
+        <span class="icon-computer-ok"></span>
+        <div class="info">
+          <h4>Creativity</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do</p>
+        </div>
+      </div>
+
+
+      <div class="w-100 outline"></div>
+
+      <div class="col-4 col-item">
+        <span class="icon-book"></span>
+        <div class="info">
+          <h4>seo</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do</p>
+        </div>
+      </div>
+      <div class="col-4 col-item">
+        <span class="icon-home1"></span>
+        <div class="info">
+          <h4>Css/Html</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do</p>
+        </div>
+      </div>
+      <div class="col-4 col-item">
+        <span class="icon-digital"></span>
+        <div class="info">
+          <h4>digital</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do</p>
+        </div>
+      </div>
+
+    </div>
+
+  </div>
+</section>
+<section class="section all-devices">
+
+  <div class="container position-relative">
+
+    <div class="aim pb-3 text-center">What we do</div>
+    <div class="title font-weight-bold text-uppercase pb-5 text-center">Story about us</div>
+  </div>
+
+    <div class="all-devices-image">
+      <img class="first-image" src="image/display_bg_768x1024.png" alt="This is a photo display of phone">
+      <img class="second-image" src="image/phone_white.png" alt="This is a small telephone">
+    </div>
+
+</section>
+
+<section class="section">
+  <div class="container">
+
+    <div class="aim pb-3 text-center">Service</div>
+    <div class="title font-weight-bold text-uppercase pb-5 text-center">What we do</div>
+    <div class="row justify-content-center">
+      <div class="col-10">
+        <p class="text py-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-6">
+        <img src="image/man&photo.jpg" alt="This is a photo">
+      </div>
+      <div class="col-6">
+
+        <div class="accordion" id="accordionExample">
+          <div class="card card-style">
+            <div class="card-header card-header-style" id="headingOne">
+              <h5 class="mb-0">
+                <span class="icon-photograph"></span>
+                <button class="btn btn-link btn-style" type="button" class="collapse show" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  Photography
+                  <img src="image/arrow_up.svg" data-toggle="collapse" data-target="arrow-show" alt="This is an arrow">
+                </button>
+
+              </h5>
+            </div>
+
+            <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+              <div class="card-body card-body-style pr-4 position-relative">
+                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                <div class="text-scroll"></div>
+              </div>
+            </div>
+          </div>
+          <div class="card card-style">
+            <div class="card-header card-header-style" id="headingTwo">
+              <h5 class="mb-0">
+                <span class="icon-equalizer"></span>
+                <button class="btn btn-link collapsed btn-style" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                  creativity
+                  <img src="image/arrow_down.svg" alt="This is an arrow">
+                </button>
+
+              </h5>
+            </div>
+            <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+              <div class="card-body card-body-style pr-4 position-relative">
+                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                <div class="text-scroll"></div>
+              </div>
+            </div>
+          </div>
+          <div class="card card-style">
+            <div class="card-header card-header-style" id="headingThree">
+              <h5 class="mb-0">
+                <span class="icon-bullseye"></span>
+                <button class="btn btn-link collapsed btn-style" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                  web design
+                  <img src="image/arrow_down.svg" alt="This is an arrow">
+                </button>
+
+              </h5>
+            </div>
+            <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+              <div class="card-body card-body-style pr-4 position-relative">
+                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                <div class="text-scroll"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+</div>
+
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 </body>
 </html>
