--- a/11.02/index.html
+++ b/11.02/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://i.icomoon.io/public/temp/e44bb8910a/UntitledProject/style.css">
+  <link rel="stylesheet" href="css/icomoon_style.css">
 
   <link rel="stylesheet" href="css/main.css">
 </head>
@@ -212,6 +212,7 @@
 
   </div>
 </section>
+
 <section class="section all-devices">
 
   <div class="container position-relative">
@@ -250,7 +251,7 @@
                 <span class="icon-photograph"></span>
                 <button class="btn btn-link btn-style" type="button" class="collapse show" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   Photography
-                  <img src="image/arrow_up.svg" data-toggle="collapse" data-target="arrow-show" alt="This is an arrow">
+                  <img src="image/arrow_up.svg" alt="This is an arrow">
                 </button>
 
               </h5>
@@ -303,11 +304,38 @@
 
       </div>
     </div>
-</div>
+  </div>
+</section>
+
+<section class="line-block">
+
+  <div class="container">
+    <div class="slider d-flex justify-content-between align-items-start">
+      <span class="icon-arrow_left"></span>
+
+      <div class="box-icon d-flex justify-content-center align-items-center">
+        <img src="image/speech.svg" alt="This is a speech icon">
+      </div>
+      <div class="quote">
+        <blockquote class="quote_style">
+          “Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.”
+        </blockquote>
+        <p class="author">Jon Doe</p>
+      </div>
+
+      <span class="icon-arrow_right"></span>
+    </div>
+  </div>
+
+</section>
+
 
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+
+
+
 </body>
 </html>
