Finished section and second line block

--- a/11.02/index.html
+++ b/11.02/index.html
@@ -11,7 +11,9 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  <section class="main"<!--vh-100-->>
+    <!--    Main section   -->
+
+  <section class="main">
     <div class="container-fluid">
 
       <header class="header">
@@ -87,7 +89,7 @@
       <div class="title font-weight-bold text-uppercase pb-5 text-center">Story about us</div>
 
       <div class="row justify-content-center">
-        <div class="col-10">
+        <div class="col-10 text-center">
           <p class="text py-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
         </div>
       </div>
@@ -122,12 +124,13 @@
             <p>super team</p>
           </div>
         </div>
-
+      </div>
     </div>
-
   </section>
 
-  <div class="lines">
+      <!--    Lines with numbers    -->
+
+  <section class="lines">
     <div class="container">
       <div class="row justify-content-between align-items-center">
         <div class="lines-item flex-grow-1">
@@ -152,7 +155,9 @@
         </div>
       </div>
     </div>
-  </div>
+  </section>
+
+    <!--  What work with section  -->
 
 <section class="section">
   <div class="container">
@@ -213,6 +218,8 @@
   </div>
 </section>
 
+    <!--  All devices  -->
+
 <section class="section all-devices">
 
   <div class="container position-relative">
@@ -228,13 +235,15 @@
 
 </section>
 
+    <!--  Service section  -->
+
 <section class="section">
   <div class="container">
 
     <div class="aim pb-3 text-center">Service</div>
     <div class="title font-weight-bold text-uppercase pb-5 text-center">What we do</div>
     <div class="row justify-content-center">
-      <div class="col-10">
+      <div class="col-10 text-center">
         <p class="text py-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
       </div>
     </div>
@@ -307,6 +316,8 @@
   </div>
 </section>
 
+    <!--  Quote section  -->
+
 <section class="line-block">
 
   <div class="container">
@@ -328,6 +339,82 @@
   </div>
 
 </section>
+
+    <!--  What we do section  -->
+
+<section class="section">
+      <div class="container">
+        <div class="aim pb-3 text-center">Who we are</div>
+        <div class="title font-weight-bold text-uppercase pb-5 text-center">Meet our team</div>
+
+        <div class="row justify-content-center">
+          <div class="col-10 text-center">
+            <p class="text py-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+          </div>
+        </div>
+
+        <div class="row justify-content-center">
+          <div class="col-4 position-relative">
+            <div class="image">
+              <img src="image/man1.jpg" alt="This is an image">
+            </div>
+            <div class="block-socials d-flex align-items-center">
+              <a href="#"><span class="icon-facebook"></span></a>
+              <a href="#"><span class="icon-twitter"></span></a>
+              <a href="#"><span class="icon-pinterest"></span></a>
+              <a href="#"><span class="icon-photograph"></span></a>
+            </div>
+            <div class="human-info">
+              <span class="human-name">Matthew Dix</span>
+              <span class="human-work">Graphic Design</span>
+            </div>
+          </div>
+
+          <div class="col-4 position-relative">
+            <div class="image">
+              <img src="image/man2.jpg" alt="This is an image">
+            </div>
+            <div class="block-socials d-flex align-items-center">
+              <a href="#"><span class="icon-facebook"></span></a>
+              <a href="#"><span class="icon-twitter"></span></a>
+              <a href="#"><span class="icon-pinterest"></span></a>
+              <a href="#"><span class="icon-photograph"></span></a>
+            </div>
+            <div class="human-info">
+              <span class="human-name">Christopher Campbell</span>
+              <span class="human-work">Branding/UX design</span>
+            </div>
+          </div>
+
+          <div class="col-4 position-relative">
+            <div class="image">
+              <img src="image/man3.jpg" alt="This is an image">
+            </div>
+            <div class="block-socials d-flex align-items-center">
+              <a href="#"><span class="icon-facebook"></span></a>
+              <a href="#"><span class="icon-twitter"></span></a>
+              <a href="#"><span class="icon-pinterest"></span></a>
+              <a href="#"><span class="icon-photograph"></span></a>
+            </div>
+            <div class="human-info">
+              <span class="human-name">Michael Fertig </span>
+              <span class="human-work">Developer</span>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </section>
+
+    <!--    Second line block   -->
+
+    <section class="line-block">
+
+      <div class="container">
+        <img src="image/partners.png" alt="This are logo of the partners">
+      </div>
+
+    </section>
 
 
 
